samples/_failures_safe/1761644418_49c3fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eb75d779.c: In function ‘main’:
./samples/SAFE/__tmp_eb75d779.c:156:28: error: missing terminating " character
  156 |                     printf("Matrix multiplication
      |                            ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_eb75d779.c:156:21: error: expected expression at end of input
  156 |                     printf("Matrix multiplication
      |                     ^~~~~~
./samples/SAFE/__tmp_eb75d779.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eb75d779.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eb75d779.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eb75d779.c:156:21: error: expected declaration or statement at end of input
